@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <meta name="GENERATOR" content="Mozilla/4.5 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
+   <meta name="GENERATOR" content="Mozilla/4.72 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
    <meta name="Author" content="Bob Friesenhahn">
    <meta name="Description" content="Documentation for Magick++'s montage options class.">
    <meta name="Keywords" content="Magick++,montage,ImageMagick">
@@ -187,7 +187,8 @@ thumbnail.</font></td>
 
 <td><font size=-1>void</font></td>
 
-<td><font size=-1>unsigned int gravity_</font></td>
+<td><font size=-1><a href="Enumerations.html#GravityType">GravityType</a>
+gravity_</font></td>
 
 <td ROWSPAN="2" NOSAVE><font size=-1>Specifies the thumbnail positioning
 within the specified geometry area. If the thumbnail is smaller in any
@@ -195,7 +196,7 @@ dimension than the geometry, then it is placed according to this specification.<
 </tr>
 
 <tr>
-<td><font size=-1>unsigned int</font></td>
+<td><font size=-1><a href="Enumerations.html">GravityType</a></font></td>
 
 <td><font size=-1>void</font></td>
 </tr>
@@ -210,9 +211,8 @@ dimension than the geometry, then it is placed according to this specification.<
 <td><font size=-1>std::string label_</font></td>
 
 <td ROWSPAN="2" NOSAVE><font size=-1>Specifies the format used for the
-image label.&nbsp; Special <a href="FormatCharacters.html">format
-characters</a> may be embedded in the format string to include information
-about the image.</font></td>
+image label.&nbsp; Special <a href="FormatCharacters.html">format characters</a>
+may be embedded in the format string to include information about the image.</font></td>
 </tr>
 
 <tr>
